--- a/admin.html
+++ b/admin.html
@@ -14,18 +14,12 @@
     <!-- -->
 
             <div class="flex">
-
                 <div>
-                    Meklēt tehniku
-                </div>
-                <div>
-                    <input type="text">
-                    <br><br>
                     <a class="button" href="problema.html">Problēmu ziņojums</a>
-
+                    <br><br>
                 </div>
                 <div>
-                    <a class="button" href="klases.html">Klasēs pieejamā tehnika</a>
+                    <a class="button" href="kabineti.html">Kabinetos pielietojamā tehnika</a>
 					<br><br>
                     <a class="button" href="tehnika.html">Tehnikas datubāze </a>
                 </div>
