--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 			head("","");
 		</script>
     <!-- -->
+		<form method="post" action="admin.html" onsubmit="validateForms(this); return false;">
 			<div class="flex">
-				<form method="post" action="admin.html" onsubmit="validateForm(this); return false;">
 					<div class="col">
 						<label>Lietotājs:</label>
 						<br><br>
@@ -25,16 +25,16 @@
 						<br><br>
 						<input type="password" id="password" required>
 						<br><br>
-						<input class="button" type="submit" value="Pierakstīties">
+						<input class="button" type="submit" value="Pieteikties">
 						<br><br>
-						</div>
-					<div>
-						<a class="button" href="klases_tehnika.html">Kabinetos pielietojamā tehnika</a><br><br>
-						<a class="button" href="pieteikt.html">Ziņot par problēmu ar tehniku</a>
-
 					</div>
 					</form>
-				</div>
+					<div>
+						<a class="button" href="kabineti.html">Kabinetos pielietojamā tehnika</a>
+						<br><br>
+						<a class="button" href="pieteikt.html">Ziņot par problēmu ar tehniku</a>
+					</div>
+
 			</div>
 
 
