--- a/kabineti.html
+++ b/kabineti.html
@@ -47,7 +47,7 @@
     <script>
         foot();
 		klasesTehnikaf();
-		//getData("visas_tehnikas_db","rinda",["name","invNr","room","note","status"],'statuss("rinda")');
+		//getData("datorudb","rinda",["name","invNr","room","note","status"],'statuss("rinda")');
     </script>
 </body>
 
