--- a/pievienot.html
+++ b/pievienot.html
@@ -20,7 +20,9 @@
             </div>
             <div class="col">
                 <select name="tehnika" id="tehnika" onchange="nomainiLaukus()">
-                 </select>
+			<!-- <select id="myCab" onchange ="meklet(2, this.id)" alt="Mekēt pēc kabineta"> -->
+				<!-- <option value="">Viss saraksts</option> -->
+			</select>
             </div>
         </div>
         
@@ -44,7 +46,7 @@
     <!-- -->
     <script>
         foot();
-		getList("unity_type","tehnika", "Dators");
+		getList("unit","tehnika", "Dators");
     </script>
 </body>
 
