--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			head("","");
 		</script>
     <!-- -->
-		<form method="post" action="admin.html" onsubmit="validateForms(this); return false;">
+		<form method="post" action="admin.html" onsubmit="validateForm(this); return false;">
 			<div class="flex">
 					<div class="col">
 						<label>Lietotājs:</label>
