--- a/pievienot.html
+++ b/pievienot.html
@@ -33,31 +33,31 @@
         <p id="datortehnika">dators</p>
         <div class="flex1"> <!--saliek blakus kastes-->            
             <div class="col">            
-                <button class="nosaukumi" id="bnos1">Id</button>
-                <input class="dati" type="text" id="inos1" name="id" ><br>
-                <button class="nosaukumi" id="bnos2">Inventāra nr</button>
+                <label class="nosaukumi buttons" id="bnos1">Id</label>
+                <input class="dati" type="number" id="inos1" name="id" value="1" readonly><br>
+                <label class="nosaukumi buttons" type="button" id="bnos2">Inventāra nr</label>
                 <input class="dati" type="text" id="inos2" name="inventaraNR" ><br>
-                <button class="nosaukumi" id="bnos3">Nosaukums</button>
+                <label class="nosaukumi buttons" type="button" id="bnos3">Nosaukums</label>
                 <input class="dati" type="text" id="inos3" name="nosaukums" ><br>
-                <button class="nosaukumi" id="bnos4">Iegādes gads</button>
-                <input class="dati" type="number" id="inos4" name="iegadesGads" ><br>
-                <button class="nosaukumi" id="bnos5">Piegādātājs</button>
-                <input class="dati" type="text" id="inos5" name="piegadatajs" ><br> 
-                <button class="nosaukumi" id="bnos6">Ražotājs</button>
-                <input class="dati" type="text" id="inos6" name="razotajs"><br> 
+                <label class="nosaukumi buttons" type="button" id="bnos4">Iegādes gads</label>
+                <input class="dati" type="number" id="inos4" name="iegadesGads" value="2012" ><br>
+                <label class="nosaukumi buttons" type="button" id="bnos5">Piegādātājs</label>
+                <select class="dati" id="inos5" id="inos5" name="piegadatajs" ></select><br> 
+                <label class="nosaukumi buttons" type="button" id="bnos6">Ražotājs</label>
+                <select class="dati" id="inos6" name="razotajs"></select><br> 
             </div>
             <div class="col">            
-                <input class="nosaukumi buttons" type="button" id="bnos7" value="Kabineta nr.">
+                <label class="nosaukumi buttons" type="button" id="bnos7">Kabineta nr.</label>
                 <input class="dati" type="text" id="inos7" name="kabinetaNr" ><br>
-                <input class="nosaukumi buttons" type="button" id="bnos8" value="Atbildīgais">
+                <label class="nosaukumi buttons" type="button" id="bnos8">Atbildīgais</label>
                 <input class="dati" type="text" id="inos8" name="atbildigais" ><br>
-				<input class="nosaukumi buttons" type="button" id="bnos9" value="Info1">
+				<label class="nosaukumi buttons" type="button" id="bnos9">Info1</label>
 				<input class="dati" type="text" id="inos9" name="info1" ><br>
-				<input class="nosaukumi buttons" type="button" id="bnos10" value="Info2">
+				<label class="nosaukumi buttons" type="button" id="bnos10">Info2</label>
 				<input class="dati" type="text" id="inos10" name="info2" ><br>
-				<input class="nosaukumi buttons" type="button" id="bnos11" value="Info3">
+				<label class="nosaukumi buttons" type="button" id="bnos11">Info3</label>
 				<input class="dati" type="text" id="inos11" name="Info3" ><br> 
-				<input class="nosaukumi buttons" type="button" id="bnos12" value="Info4">
+				<label class="nosaukumi buttons" type="button" id="bnos12">Info4</label>
 				<input class="dati" type="text" id="inos12" name="Info4"><br>
             </div>
         </div>
@@ -67,6 +67,8 @@
     <script>
         foot();
 		getList("unit","tehnika", "Dators");
+		getList("unit","inos5", "");
+		getList("unit","inos6", "");
 		nomainiLaukus("Dators");
     </script>
 </body>
